# p3-lib

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: nightly.yml  release.yml
aimcli/: Cargo.toml
aimcli/src/: main.rs
cprcli/: Cargo.toml
cprcli/src/: main.rs
mod-debug-navpoint-matrix/: Cargo.toml
mod-debug-navpoint-matrix/src/: ffi.rs  lib.rs
mod-fix-bath-house-bribe-blunders/: Cargo.toml
mod-fix-bath-house-bribe-blunders/src/: ffi.rs
mod-fix-damage-to-offside-ship-artillery/: Cargo.toml
mod-fix-damage-to-offside-ship-artillery/src/: ffi.rs
mod-fix-invulnerable-ship-artillery-slots/: Cargo.toml
mod-fix-invulnerable-ship-artillery-slots/src/: ffi.rs
mod-fix-market-hall-production-town/: Cargo.toml
mod-fix-market-hall-production-town/src/: ffi.rs
mod-fix-multiplayer-locks/: Cargo.toml
mod-fix-multiplayer-locks/src/: ffi.rs  lib.rs
mod-fix-new-settlement-ware-production/: Cargo.toml
mod-fix-new-settlement-ware-production/src/: ffi.rs
mod-fix-siege-beggar-satisfaction-bonus/: Cargo.toml
mod-fix-siege-beggar-satisfaction-bonus/src/: ffi.rs
mod-fix-uncompressed-trade-route-loading/: Cargo.toml
mod-fix-uncompressed-trade-route-loading/src/: ffi.rs
mod-high-res/: Cargo.toml
mod-high-res/src/: ffi.rs
mod-increase-alderman-found-settlement-mission-limit/: Cargo.toml
mod-increase-alderman-found-settlement-mission-limit/src/: ffi.rs
mod-render-all-ships/: Cargo.toml
mod-render-all-ships/src/: ffi.rs
mod-scrollmap-render-all-ships/: Cargo.toml
mod-scrollmap-render-all-ships/src/: ffi.rs
mod-shipyard-details/: Cargo.toml
mod-shipyard-details/src/: ffi.rs
mod-tavern-show-all-sailors/: Cargo.toml
mod-tavern-show-all-sailors/src/: ffi.rs
mod-town-hall-details/: Cargo.toml
mod-town-hall-details/src/: ffi.rs  lib.rs
mod-town-hall-details/src/pages/: aldermans_office.rs  details.rs  mod.rs
mod-trading-office-prices-synchronization/: Cargo.toml
mod-trading-office-prices-synchronization/src/: ffi.rs  lib.rs
navpointmatrixcli/: Cargo.toml  README.md
navpointmatrixcli/src/: cli.rs  connected_nodes.rs  main.rs  ordered_f32.rs  ordered_f64.rs
p3-agent/: Cargo.toml
p3-agent-loader/: Cargo.toml
p3-agent-loader/src/: main.rs  remote_process.rs  remote_thread.rs  remote_virtual_allocation.rs
p3-agent/src/: ffi.rs  lib.rs  routes.rs  server.rs
p3-aim/: Cargo.toml
p3-aim-sys/: Cargo.toml  README.md  build.rs
p3-aim-sys/blobs/: AIM.lib  create_lib.cmd  ijl11.lib
p3-aim-sys/src/: ffi.rs  lib.rs  raw_aim_file.rs
p3-aim/src/: lib.rs
p3-aim/tests/: Stadttor.aim  X_holk_a.aim  X_schniggeuntenno.aim  lib.rs  page_schiffe.aim
p3-api/: Cargo.toml  NativeMethods.g.cs  build.rs
p3-api-dotnet/: Cargo.toml  NativeMethods.g.cs  build.rs
p3-api-dotnet/src/: lib.rs
p3-api-dotnet/src/structs/: mod.rs  ship.rs  town.rs
p3-api/src/: class35.rs  facility.rs  game_world.rs  lib.rs  merchant.rs  mods.rs  operation.rs  operations.rs  routes.rs  ship.rs  ships.rs
p3-api/src/data/: class27.rs  class48.rs  class6.rs  convoy.rs  enums.rs  game_world.rs  mission.rs  missions.rs  mod.rs  navigation_matrix.rs  navigation_vector.rs  navpoint_matrix.rs  office.rs  operation.rs  p3_ptr.rs  screen_game_ini_anim.rs  screen_rectangle.rs  ship.rs  ships.rs  statics.rs  storage.rs  town.rs
p3-api/src/dotnet/: mod.rs
p3-api/src/export/: mod.rs
p3-api/src/missions/: alderman_missions.rs  mod.rs
p3-api/src/p3_access_api/: local_p3_access_api.rs  mod.rs  open_process_p3_access_api.rs  raw_p3_access_api.rs
p3-api/src/scheduled_tasks/: mod.rs  scheduled_task.rs
p3-api/src/structs/: ship.rs  town.rs
p3-api/src/town/: map.rs  mod.rs  shipyard.rs  static_town_data.rs
p3-api/src/ui/: class37.rs  class73.rs  ddraw.rs  font.rs  mod.rs  ui_shipyard_window.rs  ui_town_hall_sidemenu.rs  ui_town_hall_window.rs  ui_trading_office_window.rs
p3-api/tests/: lib.rs
p3-influxdb/: .gitignore  Cargo.toml  docker-compose.yml
p3-influxdb/src/: main.rs
p3-modloader/: Cargo.toml
p3-modloader/src/: ffi.rs  lib.rs
p3-patches/: Cargo.toml
p3-patches/.cargo/: config.toml
p3-patches/src/: main.rs
p3-rou/: Cargo.toml
p3-rou/src/: cli.rs  decompress.rs  lib.rs
p3-rou/tests/: .gitignore  a.rou  lib.rs
