[workspace]
resolver = "2"

members = [
    "aimcli",
    "cprcli",
    "mod-fix-damage-to-offside-ship-artillery",
    "mod-fix-market-hall-production-town",
    "mod-fix-new-settlement-ware-production",
    "mod-fix-siege-beggar-satisfaction-bonus", 
    "mod-high-res",
    "mod-increase-alderman-found-settlement-mission-limit",
    "mod-scrollmap-render-all-ships",
    "mod-tavern-show-all-sailors",
    #"p3-agent",
    "p3-agent-loader",
    "p3-aim",
    "p3-aim-sys",
    "p3-api", "p3-modloader",
    "p3-rou",
]
exclude = [
]

[workspace.package]
version = "0.1.4"

[workspace.dependencies]
hooklet = "^0.1.4"
clap = { version = "4.3.0", features = ["derive"] }
simple_logger = "4.1"
log = "0.4"
sysinfo = "0.29"
win_dbg_logger = "0.1"
