[workspace]
resolver = "2"

members = [
    "aimcli",
    "cprcli",
    "mod-fix-damage-to-offside-ship-artillery",
    "mod-fix-invulnerable-ship-artillery-slots",
    "mod-fix-market-hall-production-town",
    "mod-fix-new-settlement-ware-production",
    "mod-fix-siege-beggar-satisfaction-bonus", 
    "mod-high-res",
    "mod-increase-alderman-found-settlement-mission-limit",
    "mod-scrollmap-render-all-ships",
    "mod-shipyard-details",
    "mod-tavern-show-all-sailors",
    "mod-town-hall-details",
    #"p3-agent",
    "p3-agent-loader",
    "p3-aim",
    "p3-aim-sys",
    "p3-api",
    "p3-modloader",
    "p3-rou",
]
exclude = [
]

[workspace.package]
version = "0.1.6"

[workspace.dependencies]
#hooklet = "^0.1.5"
hooklet = { path = "../hooklet" }
clap = { version = "4.3.0", features = ["derive"] }
simple_logger = "4.1"
log = "0.4"
sysinfo = "0.29"
win_dbg_logger = "0.1"
num-traits = "0.2"
num-derive = "0.3"
