[package]
name = "aimcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-aim = { path = "../p3-aim" }
glob = "0.3"
clap = { version = "4.3.0", features = ["derive"] }
log = "0.4"
simple_logger = "4.1"
image = "0.24"
