[package]
name = "mod-fix-damage-to-offside-ship-artillery"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib"]
name="fix_damage_to_offside_ship_artillery"

[dependencies]
log = { workspace = true }
win_dbg_logger = { workspace = true }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
]
