[package]
name = "mod-high-res"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib"]
name="high_res"

[dependencies]
log = { workspace = true }
win_dbg_logger = { workspace = true }
p3-api = { path = "../p3-api" }
hooklet = { path = "../../hooklet" }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
]
