[package]
name = "mod-scrollmap-render-all-ships"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name="scrollmap_render_all_ships"

[dependencies]
p3-api = { path = "../p3-api" }
log = { workspace = true }
win_dbg_logger = { workspace = true }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
]
