[package]
name = "mod-tavern-show-all-sailors"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib"]
name="tavern_show_all_sailors"

[dependencies]
p3-api = { path = "../p3-api" }
log = { workspace = true }
win_dbg_logger = { workspace = true }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
]
