[package]
name = "mod-town-hall-details"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib"]
name="town_hall_details"

[dependencies]
log = { workspace = true }
win_dbg_logger = { workspace = true }
p3-api = { path = "../p3-api" }
hooklet = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
]
