[package]
name = "p3-agent-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "4.1"
sysinfo = "0.29"
clap = { version = "4.3.0", features = ["derive"] }
#p3-agent = { path = "../p3-agent" }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
]
