[package]
name = "p3-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
simple_logger = "4.1"
sysinfo = "0.29"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
]
