[package]
name = "p3-api"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
num-traits = { workspace = true }
num-derive = { workspace = true }
strum = { version = "0.24", features = ["derive"] }
csbindgen = { version = "1.7.0", optional = true }
win_dbg_logger = { workspace = true }

[dev-dependencies]
simple_logger = "4.1"
sysinfo = "0.29"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
]

[build-dependencies]
csbindgen = { version = "1.7.0", optional = true }

[features]
bindings-dotnet = ["dep:csbindgen"]
