[package]
name = "p3-influxdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-api = { path = "../p3-api" }
log = "0.4"
simple_logger = "4.1"
chrono = "0.4"
async-std = { version = "1.6.5", features = ["attributes", "tokio1"] }
influxdb2 = "0.4"
influxdb2-structmap = "*"
influxdb2-derive = "*"
num-traits = "0.2"
futures = "*"
